# workspace

./: .gitignore
boostcamp-cloud-test/: pyproject.toml
boostcamp-cloud-test/part3/01-fastapi/examples/: 07_form.py  08_file.py
data_viz/: (1-3강-실습) Python_Matplotlib.ipynb  (2-1강-실습) Barplot.ipynb  (2-3강-실습) Scatterplot.ipynb  (3-1강-실습) Text.ipynb  (3-2강-실습) Color.ipynb  (3-3강-실습) Facet.ipynb  (3-4강-실습) MoreInfo.ipynb  (4-2강-실습) Seaborn Basic.ipynb  (5-2강-실습) Pie.ipynb  (5-3-실습) Python Libraries.ipynb  (7-2강-실습) Image Text Visualization Techniques.ipynb
dl_basics/: (2강-실습) Multi-Layer Perceptron.ipynb  (3강-실습) Optimization Methods.ipynb  (4강-실습) Covolutional Neural Network.ipynb  (7강-실습) Recurrent Neural Networks.ipynb  (8강-실습) Transformer.ipynb  (Advanced_1)_ViT_Vision_Transformer_(Answers).ipynb  (Advanced_1)_ViT_Vision_Transformer_(Problems).ipynb  (Advanced_2)_AAE_Adversarial_Auto_Encoder_(Answers).ipynb  (Basics_3)_CNN_Assignment_(Problems).ipynb  (Basics_4)_LSTM_Assignment_(Problems).ipynb
klue_mrc_practice/: (3강-실습) Generation-based MRC.ipynb  (4강-실습) TF-IDF Passage Retrieval.ipynb  (5강-실습) Dense Passage Retrieval (In-batch).ipynb  (5강-실습) Dense Passage Retrieval.ipynb  (6강-실습) Scaling up with FAISS (In-batch).ipynb  (6강-실습) Scaling up with FAISS.ipynb  (7강-실습) Open-Domain Question Answering.ipynb  (8강-실습) Reducing Training Bias.ipynb  (9강-실습) Closed book QA.ipynb  (미션-1) QuickTour Huggingface.ipynb  (미션-3) Generation based MRC.ipynb  (미션-4) Sparse Dense Passage Retrieval (문제).ipynb  (+2 more)
numpy_transformer/: losses.py  (+2 more)
(+129 files in other folders)
